# 3d_mesh_viewer

./: README.md  pyproject.toml
.memex/: config.yaml
mesh_visualizer/: app.py
